--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -367,7 +367,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <h2>
-                        <strong>Rankin de recaudaci&oacute;n perc&aacute;pita {{ year }}</strong>
+                        <strong>Ranking de recaudaci&oacute;n perc&aacute;pita {{ year }}</strong>
                         <br>
                         Municipio de
                         <strong>{{ municipio }}</strong>
@@ -423,7 +423,7 @@
                         <thead>
                         <tr>
                             <td colspan="3">
-                                <h4>Rankin de recaudaci&oacute;n perc&aacute;pita {{ year }}
+                                <h4>Ranking de recaudaci&oacute;n perc&aacute;pita {{ year }}
                                     Municipio de {{ municipio }} grupo "{{ mi_clase.clasificacion }}"
                                 </h4>
                                 <h5>
