Revert "Reparando observaciones(Sin Clasificar donde el nombre del rubro es None para 2016 OGM, corregir error de areas para 2016 inversion)"

--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -233,7 +233,7 @@
                                 </tr>
                             {% endfor %}
                             <tr>
-                                <td class="text-center">NACIONAL</td>
+                                <td>PROMEDIO</td>
                                 <td class="text-right">
                                     <strong>{{ porclasep|total_avg:'asignado'|floatformat:2 }}%</strong></td>
                                 <td class="text-right">
