--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -47,7 +47,7 @@
                                 </span>
                             <div class="info-box-content">
                                     <span class="info-box-number font-17px">
-                                        <strong>Inicial {{ asignado|million|intcomma }} M. de Córdobas</strong>
+                                        <strong>Inicial {{ asignado|million|intcomma }}</strong>
                                     </span>
                             </div>
                         </div>
@@ -58,7 +58,7 @@
                                 </span>
                             <div class="info-box-content">
                                     <span class="info-box-number font-17px">
-                                        <strong>Cierre {{ ejecutado|million|intcomma }} M. de Córdobas</strong>
+                                        <strong>Cierre {{ ejecutado|million|intcomma }}</strong>
                                     </span>
                             </div>
                         </div>
@@ -68,7 +68,7 @@
                             <div class="info-box">
                                     <span class="info-box-icon pma-icon municipality-category">
                                     </span>
-                                <div class="info-box-content">Modificación al 30 de Agosto de 2016
+                                <div class="info-box-content">
                                         <span class="info-box-number font-17px">
                                             <strong>Grupo de municipio {{ mi_clase.clasificacion }}</strong>
                                         </span>
