comenado fila de total en rankig de gastos de personal percapital

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -252,6 +252,7 @@
                                     {% endif %}
                                 </tr>
                             {% endfor %}
+                            {% comment %}
                             <tr>
                                 <td>
                                     <strong>TOTAL</strong>
@@ -266,6 +267,7 @@
                                     </td>
                                 {% endif %}
                             </tr>
+                            {% endcomment %}
                             </tbody>
                             <tfoot class="font-12px font-color-azul">
                             <tr>
