--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -577,10 +577,10 @@
                 {% endif %}
                 {% descargar_excel "icat7" %}
                 </h4>
-                <table class="table small-font">
+                <table class="table border-in-fixed-columns">
                     <thead>
                     <tr>
-                        <th colspan="1" rowspan="2" class="text-center fixed">Categor&iacute;as</th>
+                        <th colspan="1" style="font-size: 20px" rowspan="2" class="text-center fixed">Categor&iacute;as</th>
                         {% for year in year_list %}
                             {% if year >= 2012 %}
                                 <th rowspan="1" colspan="2"
@@ -609,7 +609,7 @@
                     <tbody>
                     {% for key, data in porano.items %}
                         <tr>
-                            <td class="text-left fixed">{{ key }}</td>
+                            <td class="text-left fixed" style="font-size: 20px">{{ key }}</td>
                             {% for year in year_list %}
                                 {% if year >= 2012 %}
                                     {% with year_data=data|keyvalue:year %}
