--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -58,17 +58,17 @@
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     {% for i in cat %}
                                         <div class="icons-inversion col-xs-6 col-sm-2 col-md-2 text-center height-categoria">
-                                            <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.catinversion__slug }}"
+                                            <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo_list|keyvalue:year }}&catinversion={{ i.catinversion__slug }}"
                                                class="font-color-celeste">
                                                 <span class="info-box-icon pma-icon {{ i.catinversion__slug }}"></span>
                                             </a>
                                             <h5 class="text-center">
-                                                <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.catinversion__slug }}"
+                                                <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo_list|keyvalue:year }}&catinversion={{ i.catinversion__slug }}"
                                                    class="font-color-celeste">
                                                     <strong>{{ i.catinversion__nombre }}</strong>
                                                 </a>
                                                 <br/>
-                                                {% if periodo == 'I' %}
+                                                {% if periodo_list|keyvalue:year == 'I' %}
                                                     <span class="font-17px">{{ i.inicial_asignado|million|intcomma }}</span>
                                                 {% else %}
                                                     <span class="font-17px">{{ i.ejecutado|million|intcomma }}</span>
